bug visibilidade lista arrumado - November, 6th

--- a/css/estilo.css
+++ b/css/estilo.css
@@ -6,3 +6,7 @@
 	padding-left: 10px;
 	padding-right: 10px;
 }
+
+.mostra-usuarios{
+	visibility: hidden;
+}
